chore: moved static files under src directory + serving files after transformation

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,7 +13,7 @@
       </form>
 
       <div id="result">
-        
+        <img src="#" alt="output" id="output" />        
       </div>
     </main>
     <script src="/script.js"></script>
