chore: added colors legend

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -14,6 +14,7 @@
 
       <div id="result">
         <img src="#" alt="output" id="output" />        
+        <div id="colors"></div>
       </div>
     </main>
     <script src="/script.js"></script>
