--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,21 +13,29 @@
 
         <label for="type">Type</label>
         <select id="type">
-          <option value="coordinates">coordinates</option>
           <option value="in-grid">in grid</option>
+          <option value="coordinates">coordinates</option>
         </select>
+        <label for="colors">max. number of colors</label>
+        <input type="number" id="colors" value="4" min="4" max="25" />
+        <label for="size">size [px]</label>
+        <input type="number" id="size" value="20" min="10" max="50" />
+
+        <input id="generate" type="submit" value="generate" />
       </form>
       <hr />
+
+      <img src="/throbber.gif" class="hide" id="throbber" /> 
       
       <div id="grid">
        
 
       </div>
 
-      <div id="result">
+      <div class="hide" id="result">
         <img src="#" id="output" />        
 
-        <div id="colors"></div>
+        <div id="colorsList"></div>
       </div>
     </main>
     <script src="/script.js"></script>
